# src/api-doc/api-doc.yaml
@@ -4547,7 +4547,7 @@ paths:
             application.json:
               schema:
                 $ref: '#/components/schemas/organization/createConfig400Response'
-  /scp/v1/organization-extension/updateConfig?resource_type={resource_type}:
+  /scp/v1/organization-extension/updateConfig/{id}?resource_type={resource_type}:
     post:
       summary: Update the organization configurations
       tags:
@@ -4566,6 +4566,13 @@ paths:
           required: true
           schema:
             type: string
+        - in: path
+          name: id
+          description: Please append a valid config Id to the Request URL.
+          schema:
+            type: number
+          required: true
+          example: 1
         - in: query
           name: resource_type
           description: Please append a valid resource type to the Request URL.
@@ -4584,15 +4591,12 @@ paths:
                   type: boolean
                 min_approval:
                   type: string
-                resource_type:
-                  type: string
 
             examples:
               example1:
                 value:
                   show_reviewer_list: true
                   min_approval: 2
-                  resource_type: project
 
       responses:
         '201':
